fix: fixes marker not showing in safari / iOS browsers

--- a/src/styles/_elements.scss
+++ b/src/styles/_elements.scss
@@ -19,7 +19,7 @@ body, html {
 ol,
 ul {
   list-style: none;
-  margin: 0.5rem;
+  margin: 1rem;
   padding: 0;
 }
 
@@ -30,5 +30,7 @@ li {
 li::before {
   color: variables.$tart-orange;
   content: '●' !important;
-  margin-right: 0.5rem;
+  display: inline-block;
+  width: 1em;
+  margin-left: -1em
 }
